--- a/getting-started/options.css
+++ b/getting-started/options.css
@@ -11,3 +11,18 @@ table.sortable tbody tr:nth-child(2n+1) td {
 table.sortable tbody tr:nth-child(2n) td {
   background: #EEEEEE;
 }
+#clearHistory {
+  border: none;
+  border-radius: 4px;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: sans-serif;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 160px;
+  background-color: #1B6EC2;
+}
